--- a/DiabetesPredictionLogistic.ipynb
+++ b/DiabetesPredictionLogistic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DiabetesPredictionLogistic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvRC+hrF7uTCN0M+tknGE4",
+      "authorship_tag": "ABX9TyNxOeWjPf5mdEd6HLOb3N0H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# using joblib to save our model\n",
         "!pip install joblib"
       ],
       "metadata": {
@@ -48,7 +49,7 @@
         "id": "QCpxcbLLNdjA",
         "outputId": "b59c48bc-fdd0-408c-c3a3-30cf671021c4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Hxq_UoA-KvFd"
       },
@@ -139,7 +140,7 @@
         "id": "iK33L6P8O0Py",
         "outputId": "1219b804-76cf-4325-8e2e-9009b01b6930"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -172,6 +173,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# converting csv file to dataframe\n",
         "diabetesDF = pd.read_csv('diabetes.csv')\n",
         "print(diabetesDF.head())"
       ],
@@ -182,7 +184,7 @@
         "id": "afTGyqM-OHQP",
         "outputId": "a4d17a6e-9fc8-4367-c717-ac0e09df5f2b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,6 +214,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#printing info i.e. no. of columns,column labels,column data types,memory usage,range index,and the number of cells in each column (non-null values)\n",
         "diabetesDF.info()"
       ],
       "metadata": {
@@ -221,7 +224,7 @@
         "id": "qGLIslMmPgsf",
         "outputId": "eb5644e9-1b7c-453d-f916-c7a92e653259"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,8 +273,9 @@
     {
       "cell_type": "code",
       "source": [
-        "corr = diabetesDF.corr()\n",
+        "corr = diabetesDF.corr() #find the pairwise correlation of all columns in the dataframe.\n",
         "print(corr)\n",
+        "# using heatmap containing values representing various shades of the same colour for each value to be plotted\n",
         "sns.heatmap(corr, \n",
         "         xticklabels=corr.columns, \n",
         "         yticklabels=corr.columns)"
@@ -284,7 +288,7 @@
         "id": "cN-UZfvEPumW",
         "outputId": "faedced2-5c77-45d0-9b74-d423b58ef568"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +364,7 @@
       "metadata": {
         "id": "LlyMrz6dP9pE"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -375,15 +379,16 @@
     {
       "cell_type": "code",
       "source": [
+        "#converting inputs to an array\n",
         "trainLabel = np.asarray(dfTrain['Outcome'])\n",
-        "trainData = np.asarray(dfTrain.drop(columns='Outcome'))\n",
+        "trainData = np.asarray(dfTrain.drop(columns='Outcome')) #drop specified labels from rows or columns.\n",
         "testLabel = np.asarray(dfTest['Outcome'])\n",
-        "testData = np.asarray(dfTest.drop(columns='Outcome'))"
+        "testData = np.asarray(dfTest.drop(columns='Outcome'))   #drop specified labels from rows or columns."
       ],
       "metadata": {
         "id": "speb4dEZQgav"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,8 +405,8 @@
     {
       "cell_type": "code",
       "source": [
-        "means = np.mean(trainData, axis=0)\n",
-        "stds = np.std(trainData, axis=0)\n",
+        "means = np.mean(trainData, axis=0)  # mean of a numpy array\n",
+        "stds = np.std(trainData, axis=0)    # compute the standard deviation along the specified axis\n",
         "trainData = (trainData - means)/stds\n",
         "testData = (testData - means)/stds\n",
         "# np.mean(trainData, axis=0) => check that new means equal 0\n",
@@ -410,7 +415,7 @@
       "metadata": {
         "id": "elXtOtm2Rbnj"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +449,7 @@
         "id": "R-0auuRsRjhn",
         "outputId": "ae518f17-e9a9-447d-b669-031483b3c3d9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +475,7 @@
     {
       "cell_type": "code",
       "source": [
-        "accuracy = diabetesCheck.score(testData, testLabel)\n",
+        "accuracy = diabetesCheck.score(testData, testLabel)  #Returning the coefficient of determination R^2 of the prediction\n",
         "print(\"accuracy = \", accuracy * 100, \"%\")"
       ],
       "metadata": {
@@ -480,7 +485,7 @@
         "id": "CaaA7JxIRvk0",
         "outputId": "a131165d-5f1a-4385-d703-06eec6258977"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,18 +517,20 @@
     {
       "cell_type": "code",
       "source": [
-        "coeff = list(diabetesCheck.coef_[0])\n",
+        "coeff = list(diabetesCheck.coef_[0])   #creating list object\n",
         "#labels = list(trainData.columns)\n",
-        "trainLIST= list(trainData)\n",
+        "trainLIST= list(trainData)             #creating list object\n",
         "df = pd.DataFrame(trainLIST) \n",
         "labels = df.columns\n",
-        "features = pd.DataFrame()\n",
+        "features = pd.DataFrame()              #creating dataframe\n",
         "features['Features'] = labels\n",
         "features['importance'] = coeff\n",
-        "features.sort_values(by=['importance'], ascending=True, inplace=True)\n",
+        "features.sort_values(by=['importance'], ascending=True, inplace=True)   #sorting the dataframe\n",
         "features['positive'] = features['importance'] > 0\n",
-        "features.set_index('Features', inplace=True)\n",
-        "features.importance.plot(kind='barh', figsize=(11, 6),color = features.positive.map({True: 'blue', False: 'red'}))\n",
+        "features.set_index('Features', inplace=True)    # setting a List, Series or Data frame as index of a Data Frame\n",
+        "# .plot() draw points (markers) in a diagram\n",
+        "# .map processes and transform all the items in an iterable without using an explicit for loop\n",
+        "features.importance.plot(kind='barh', figsize=(11, 6),color = features.positive.map({True: 'blue', False: 'red'}))  \n",
         "plt.xlabel('Importance')"
       ],
       "metadata": {
@@ -534,7 +541,7 @@
           "height": 405
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,6 +590,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#  .dump() is used when objects are required to be in string format and is used for parsing, printing, etc\n",
+        "\n",
+        "# a file created by pickle, a Python module that enabless objects to be serialized to files on disk and deserialized back into the program at runtime. \n",
+        "# It contains a byte stream that represents the objects.\n",
         "joblib.dump([diabetesCheck, means, stds], 'diabeteseModel.pkl')\n"
       ],
       "metadata": {
@@ -592,7 +603,7 @@
         "id": "S38NnvOtRjIX",
         "outputId": "30d3bc18-e870-4a94-d6e0-4bcb18c15bbc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +629,7 @@
     {
       "cell_type": "code",
       "source": [
-        "diabetesLoadedModel, means, stds = joblib.load('diabeteseModel.pkl')\n",
+        "diabetesLoadedModel, means, stds = joblib.load('diabeteseModel.pkl') #reads the pickled byte stream of python objects from a file object\n",
         "accuracyModel = diabetesLoadedModel.score(testData, testLabel)\n",
         "print(\"accuracy = \",accuracyModel * 100,\"%\")"
       ],
@@ -629,7 +640,7 @@
         "id": "D-mMeShoRwZe",
         "outputId": "ff27ff4f-f502-4f96-8678-8f434c8e9fab"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +672,7 @@
         "id": "z2URc3GjR2kI",
         "outputId": "772d7689-9a1e-4f29-8763-fe1c853a04c7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,8 +698,8 @@
         "sampleDataFeatures = np.asarray(sampleData.drop('Outcome',1))\n",
         "sampleDataFeatures = (sampleDataFeatures - means)/stds\n",
         "# predict\n",
-        "predictionProbability = diabetesLoadedModel.predict_proba(sampleDataFeatures)\n",
-        "prediction = diabetesLoadedModel.predict(sampleDataFeatures)\n",
+        "predictionProbability = diabetesLoadedModel.predict_proba(sampleDataFeatures) #accepts single argument and returns an array of lists probabilities .\n",
+        "prediction = diabetesLoadedModel.predict(sampleDataFeatures) #predict the labels of the data values on the basis of the trained model.\n",
         "print('Probability:', predictionProbability)\n",
         "print('prediction:', prediction)"
       ],
@@ -699,7 +710,7 @@
         "id": "iOVyksJ3R_tC",
         "outputId": "0fa4178e-8b72-408f-8068-e735f2125d57"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
